# dell-pravegaapi

./: .gitignore  Kanban Board Link.txt  LICENSE.txt  README.md  Sprint 1 Report  cSharpTest.sln
Additional_Resources/Rust to C# pointer Example/: lib.rs
PravegaCSharp/: Cargo.toml  PathGen.cs  PravegaCSharp.cs
PravegaCSharp/CSharpWrapperSource/: Byte.cs  ClientConfig.cs  ControllerClient.cs  Event.cs  Shared.cs  Utility.cs
PravegaCSharp/RustWrapperSource/: auth.rs  byte.rs  client_config.rs  client_factory.rs  connection_pool.rs  controller_client.rs  event.rs  index.rs  lib.rs  retry.rs  segment.rs  sync.rs  (+3 more)
PravegaCSharpTestProject/: ByteTests.cs  ClientFactoryTests.cs  ConnectionPoolTests.cs  ControllerClientTests.cs  PravegaCSharpTestProject.csproj  PravegaTestsMain.cs  UtilityTests.cs
Project Documents/: MasterDocuement AlphaPrototype.docx  PravegaMasterDocument.docx  Project Description.docx  Project Requirements and Specifications.docx  Solution Approach.docx  Testing and Acceptance Plans.docx  ~$avegaMasterDocument.docx  ~$sting and Acceptance Plans.docx  ~WRL1681.tmp
Project_Code_Base/: .gitignore
Project_Code_Base/CSharpWrapper/: Cargo.toml  PravegaCSharp.cs
Project_Code_Base/CSharpWrapper/AuthWrapper/: Auth.cs  Cargo.toml  lib.rs
Project_Code_Base/CSharpWrapper/ByteWrapper/: Cargo.toml  lib.rs
Project_Code_Base/CSharpWrapper/ClientFactoryWrapper/: Cargo.toml  ClientFactory.cs  lib.rs  synchronizer.rs
Project_Code_Base/CSharpWrapper/ConfigWrapper/: Cargo.toml  Config.cs  connection_type_wrapper.rs  credentials_wrapper.rs  lib.rs
Project_Code_Base/CSharpWrapper/ControllerClientWrapper/: Cargo.toml
Project_Code_Base/CSharpWrapper/IndexWrapper/: Index.cs  lib.rs
Project_Code_Base/CSharpWrapper/RetryWrapper/: Cargo.toml  Retry.cs  lib.rs  retry_policy_wrapper.rs
Project_Code_Base/CSharpWrapper/SegmentWrapper/: Cargo.toml  lib.rs
Project_Code_Base/CSharpWrapper/SharedWrapper/: Cargo.toml  Shared.cs  lib.rs
Project_Code_Base/CSharpWrapper/UtilityWrappers/: Utility.cs  lib.rs
Project_Code_Base/CSharpWrapper/cSharpTest/cSharpTest/: Interop.cs  Program.cs
Project_Code_Base/CSharpWrapper/csharpBindings/: ClientFactoryWrapper.cs  PravegaCSharp.cs
Project_Code_Base/CSharpWrapper/src/: ClientFactoryWrapperMethods.rs  conversion_file.rs  rust_string_test.rs
Project_Code_Base/CSharpWrapper/tests/: bindings.rs
Project_Code_Base/Sam_Object_transfer_Compiling/: Cargo.toml  client_factory_wrapper.rs  client_factory_wrapper_client_config.rs  client_factory_wrapper_delegation_token_provider.rs  client_factory_wrapper_scoped_segment.rs  client_factory_wrapper_table.rs  stringwrapper.cs  stringwrapper.rs
Project_Code_Base/Sam_Object_transfer_Compiling/cSharpTest/cSharpTest/: Interop.cs
Project_Code_Base/Sam_Object_transfer_Compiling/csharpBindings/: ClientFactoryWrapperClientConfig.cs  ClientFactoryWrapperDelegationTokenProvider.cs  ClientFactoryWrapperIndexPlaceholder.cs  ClientFactoryWrapperScopedStream.cs  ClientFactoryWrapperSegmentMetaData.cs  ClientFactoryWrapperTable.cs  ClientFactoryWrapperWriterID.cs
Project_Code_Base/Sam_Object_transfer_Compiling/tests/: bindings.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/: Cargo.toml  PathGen.cs  PravegaCSharp.cs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/AuthWrapper/: Auth.cs  Cargo.toml  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/ByteWrapper/: Byte.cs  Cargo.toml  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/CSharpWrapperSource/: Auth.cs  ClientConfig.cs  ClientFactory.cs  Event.cs  Retry.cs  Segment.cs  Sync.cs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/ClientFactoryWrapper/: Cargo.toml  ClientFactory.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/ConfigWrapper/: Cargo.toml  Config.cs  connection_type_wrapper.rs  credentials_wrapper.rs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/ConnectionPoolWrapper/: Cargo.toml  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/ControllerClientWrapper/: Cargo.toml  ControllerClient.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/EventWrapper/: Cargo.toml  Event.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/IndexWrapper/: Cargo.toml  Index.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/RetryWrapper/: Cargo.toml  Retry.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/RustWrapperSource/: auth.rs  byte.rs  client_config.rs  client_factory.rs  event.rs  index.rs  lib.rs  shared.rs  wire_protocol.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/SegmentWrapper/: Cargo.toml  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/SharedWrapper/: Cargo.toml  Shared.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/Sync/: Cargo.toml  Sync.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/UtilityWrapper/: Cargo.toml  Utility.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/UtilityWrappers/: Cargo.toml  Utility.cs  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/WireProtocolWrapper/: Cargo.toml  lib.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/csharpBindings/: PravegaCSharp.cs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/src/: conversion_file.rs  main.rs  rust_string_test.rs
Project_Code_Base/cSharpTest/PravegaCSharpLibrary/tests/: bindings.rs
Pull Request Videos/: placeholder.txt
Sprint Reports/: sprint_2_report.md  sprint_report_1.md  sprint_report_3.md  sprint_report_4.md  sprint_report_5.md  sprint_report_6.MD  sprint_report_7.md
Tests/Interoptopus-Test-Arrays/: Cargo.toml  test.rs  testing.rs
Tests/Interoptopus-Test-Arrays/csharpBindings/: Interop.cs
Tests/Interoptopus-Test-Arrays/csharpBindings/ConsoleApp1/: ConsoleApp1.sln
Tests/Interoptopus-Test-Arrays/csharpBindings/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Interop.cs  Program.cs
Tests/Interoptopus-Test-Arrays/csharpBindings/ConsoleApp1/ConsoleApp1/Properties/: AssemblyInfo.cs
Tests/Interoptopus-Test-Arrays/csharpBindings/cSharpRunCode/cSharpRunCode/: Program.cs
(+139 files in other folders)
