[package]
name = "PravegaCSharp"
authors = ["John Sbur"]
version = "0.14.14"
edition = "2018"
license = "Apache-2.0"
keywords = ["ffi","wrapper","C#"]
categories = ["api-bindings", ".NET-core-development-tools"]
repository = "https://github.com/WSUCptSCapstone-Fall2022Spring2023/dell-pravegaapi"

[lib]
path = "./src/conversion_file.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
pravega-client = { path = "../pravega-client-rust-master/pravega-client-rust-master" }
pravega-client-config = { path = "../pravega-client-rust-master/pravega-client-rust-master/config" }
interoptopus = { path = "../Interoptopus/core", version = "0.14.0"}
interoptopus_backend_csharp = { path = "../Interoptopus/backends/csharp" }
auth_wrapper = {path = "./AuthWrapper" }
byte_wrapper = {path = "./ByteWrapper"}
client_factory_wrapper = {path = "./ClientFactoryWrapper"}
config_wrapper = { path = "./ConfigWrapper" }
retry_wrapper = {path = "./RetryWrapper"}
controller_client_wrapper = {path = "./ControllerClientWrapper"}
shared_wrapper = {path = "./SharedWrapper"}
utility = { path = "./UtilityWrappers" }
wire_protocol_wrapper = {path = "./WireProtocolWrapper"}