[package]
name = "PravegaCSharp"
authors = ["John Sbur"]
version = "0.14.14"
edition = "2018"
license = "Apache-2.0"
keywords = ["ffi","wrapper","C#"]
categories = ["api-bindings", ".NET-core-development-tools"]
repository = "https://github.com/WSUCptSCapstone-Fall2022Spring2023/dell-pravegaapi"

[lib]
path = "./RustWrapperSource/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-ffi = { version = "0.4.0" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.1"
interoptopus = { path = "../../Interoptopus/core", version = "0.14.0"}
interoptopus_backend_csharp = { path = "../../Interoptopus/backends/csharp" }
pravega-client = { path = "../../pravega-client-rust-master/pravega-client-rust-master" }
pravega-client-config = { path = "../../pravega-client-rust-master/pravega-client-rust-master/config" }
pravega-client-retry = { path = "../../pravega-client-rust-master/pravega-client-rust-master/retry"}
pravega-client-shared = { path = "../../pravega-client-rust-master/pravega-client-rust-master/shared" }
pravega-controller-client = { path = "../../pravega-client-rust-master/pravega-client-rust-master/controller-client" }
num = { version = "0.4.0" }
once_cell = {version = "1.17.1"}
tokio = { version = "1", features = ["full"] }
tokio-timer = "0.2.13"
tracing = "0.1"
tracing-subscriber = "0.3"
