[package]
name = "controller_client_wrapper"
authors = ["John Sbur"]
version = "0.14.14"
edition = "2018"
license = "Apache-2.0"
keywords = ["ffi","wrapper","C#"]
categories = ["api-bindings", ".NET-core-development-tools"]
repository = "https://github.com/WSUCptSCapstone-Fall2022Spring2023/dell-pravegaapi"

[lib]
path = "./lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
interoptopus = { path = "../../../Interoptopus/core", version = "0.14.0"}
interoptopus_backend_csharp = { path = "../../../Interoptopus/backends/csharp" }
utility_wrapper = { path = "../UtilityWrapper" } 
pravega-client-config = { path = "../../../pravega-client-rust-master/pravega-client-rust-master/config" }
pravega-controller-client = { path = "../../../pravega-client-rust-master/pravega-client-rust-master/controller-client" }
pravega-client-shared = { path = "../../../pravega-client-rust-master/pravega-client-rust-master/shared" }
tokio = { version = "1", features = ["full"] }
pravega-client = { path = "../../../pravega-client-rust-master/pravega-client-rust-master" }
num = { version = "0.4.0" }