[package]
name = "sync"
authors = ["John Sbur"]
version = "0.14.14"
edition = "2018"
license = "Apache-2.0"
keywords = ["ffi","wrapper","C#"]
categories = ["api-bindings", ".NET-core-development-tools"]
repository = "https://github.com/WSUCptSCapstone-Fall2022Spring2023/dell-pravegaapi"

[lib]
path = "./lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = { path = "../../../Interoptopus/core", version = "0.14.0"}
interoptopus_backend_csharp = { path = "../../../Interoptopus/backends/csharp" }
utility_wrapper = { path = "../UtilityWrapper" } 
pravega-client = { path = "../../../pravega-client-rust-master/pravega-client-rust-master" }
pravega-client-config = { path = "../../../pravega-client-rust-master/pravega-client-rust-master/config" }
pravega-client-shared = {path = "../../../pravega-client-rust-master/pravega-client-rust-master/shared"}
tokio = { version = "1", features = ["full"] }
futures = "0.3.1"
tokio-timer = "0.2.13"